--- a/index4.html
+++ b/index4.html
@@ -7,7 +7,6 @@
     <title>Fridge to Feast</title>
     <link rel="stylesheet" href="./Assets/CSS/style2.css" />
     <script src="./Assets/JS/script4.js" defer></script>
-
   </head>
   <body>
     <header>
@@ -15,15 +14,16 @@
         <img src="Assets/Images/search-icon.svg" alt="Search" />
     </header>
     <section class="container">
+        <div id="loading"></div>
         <div class="search">
-            <input type="text" placeholder="Search Favorites" autofocus/>
+            <input id="txtSearch" type="text" placeholder="Search Favorites" autofocus/>
             <button class="btn">Find</button>
         </div>    
         <div id="recipe-container">
-         <div class="recipe">
+         <!-- <div class="recipe">
             <div class="recipe-title">Recipe Title</div>
-            <div class="recipe-img">
-                <img src="./Assets/Images/cutting-board-with-veg.jpg" alt="cutting-board-with-veg" width="275px" height="135px">
+            <div class="recipe-img"> 
+               <img src="./Assets/Images/cutting-board-with-veg.jpg" alt="cutting-board-with-veg" width="275px" height="135px"> -->
             </div>
             <div class="recipe-text">
                 <ul>
