div recipe-container data removed

--- a/index4.html
+++ b/index4.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <header>
-        <h2>Recipe Finder</h2>
-        <img src="Assets/Images/search-icon.svg" alt="Search" />
+        <h2>Fridge to Feast</h2>
+        <!--<img src="Assets/Images/search-icon.svg" alt="Search" /> --> 
     </header>
     <section class="container">
         <div id="loading"></div>
@@ -20,10 +20,6 @@
             <button class="btn">Find</button>
         </div>    
         <div id="recipe-container">
-         <!-- <div class="recipe">
-            <div class="recipe-title">Recipe Title</div>
-            <div class="recipe-img"> 
-               <img src="./Assets/Images/cutting-board-with-veg.jpg" alt="cutting-board-with-veg" width="275px" height="135px"> -->
             </div>
             <div class="recipe-text">
                 <ul>
