Search icon moved and header font sized adjusted

--- a/index4.html
+++ b/index4.html
@@ -16,8 +16,10 @@
     <section class="container">
         <div id="loading"></div>
         <div class="search">
+            <img src="Assets/Images/search-icon.svg" alt="Search" />
             <input id="txtSearch" type="text" placeholder="Search Favorites" autofocus/>
             <button class="btn">Find</button>
+
         </div>    
         <div id="recipe-container">
             </div>
