RWD 500px margins adjusted for header and search sections

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Fridge to Feast</title>
     <link rel="stylesheet" href="./Assets/CSS/style2.css" />
-    <script src="./Assets/JS/script4.js" defer></script>
+    <script src="./Assets/JS/script.js" defer></script>
   </head>
+
   <body>
     <header>
         <h2>Fridge to Feast</h2>
-        <!--<img src="Assets/Images/search-icon.svg" alt="Search" /> --> 
     </header>
     <section class="container">
         <div id="loading"></div>
