--- a/index.html
+++ b/index.html
@@ -35,5 +35,14 @@
          </div>   
         </div>
     </section>
+
+      <!-- Footer -->
+      <footer>
+        <h2>Made with<span class="heart">❤️</span> by Fridge to Feast</h2>
+        <p>
+            &copy; 2024 Fridge to Feast
+        </p>
+    </footer>
+
   </body>
 </html>
